<resources>
    <string name="app_name">SimpleStocks</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">Not registered? Sign up here</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Simple Stocks</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="simple_stocks">Simple Stocks</string>
    <string name="contact_us">Contact Us</string>
    <string name="hint_message">Message</string>
    <string name="Button_Send_Message">Send</string>
    <string name="title_activity_settings">Settings</string>
    <string name="your_stocks">Your Stocks</string>
    <string name="top_stocks">Your Top Stocks</string>
    <string name="watchlist">Watchlist</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="contact_us_text">Contact Us</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="login_small_title">Login</string>
    <string name="register_small_title">Register</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="stock_trading_made_simple">Stock Trading Made Simple</string>
    <string name="desc_firebase_lockup">firebase lockup</string>
    <string name="custom_token">custom token</string>
    <string name="token_null">null token</string>
    <string name="firebase_user_management">user management</string>
    <string name="signed_out">signed out</string>
    <string name="sign_in">sign in</string>
    <string name="welcome_login_title">Welcome</string>
    <string name="loading">Loading...</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">verify email</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="auth_failed">Authentication failed</string>
</resources>
